tests/_resources/error_gcns/E103_unknown_wrapper.gcn
# Unknown distribution wrapper
block HOUSEHOLD {
    calibration {
        alpha ~ UnknownWrap(Beta(a=1, b=2)) = 0.5;
    };
};
